# netfight

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  PlatformConfig.cmake
app/data/: test-old.lvl  test.lvl
app/src/: bitFont.c  bitFont.h  effects.c  effects.h  item.c  item.h  level.c  level.h  main.c  main.h  main_server.c  main_server.h  myMath.c  myMath.h  myopengl.h  netPackets.h  net_client.c  net_client.h  player.c  player.h  powerup.c  powerup.h  projectile.c  projectile.h  util.h
app/src/platform/: config.h.in
app/src/shapes/: fast.h  health.h  mine.h  shield.h  spread.h  super_fast.h
cmake/: FindEnet.cmake
devtools/: run-clang-format.sh
svg2lvl/: svg2lvl.pl  test-n.lvl  test-o.lvl
